<resources>
    <string name="app_search_label">Buscar</string>
    <string name="app_search_hint">escriba aqui</string>
    <string name="app_name">Prometeo Muni</string>
    <string name="scores">Resultados en pantalla</string>
    <string name="help">Pantalla de ayuda</string>
    <string name="app_logo_top">Division Labrado de Actas</string>
    <string name="app_logo_bottom">Prov. Mendoza</string>
    <string name="app_version_info">Versión 1.0.0 \ nCopyright © 2017 Mendoza, Inc. Todos los derechos
        reservados.</string>
    <string name="menu"></string>
    <string name="menu_item_listado_actas">Actas en Dispositivo</string>
    <string name="menu_item_settings">Configuración</string>
    <string name="menu_item_play">Generar Acta</string>
    <string name="menu_item_scores">Ver Actas</string>
    <string name="menu_item_verificacion_policial">Verificación Policial</string>
    <string name="menu_item_verificacion_actas">Actas en Sistema</string>
    <string name="menu_item_help">Ayuda</string>
    <string name="menu_item_list_paises">Paises</string>
    <string name="menu_item_list_provincias">Provincias</string>
    <string name="menu_item_list_departamentos">Departamentos</string>
    <string name="menu_item_list_localidades">Localidades</string>
    <string name="menu_item_configurar_impresora">Config. Impresora</string>
    <string name="menu_item_refrescar">Refrescar</string>
    <string name="menu_item_imprimir_acta">Imprimir</string>
    <string name="menu_item_actualizar_parametros">Actualizar</string>
    <string name="menu_item_sincronizar_acta">Sincronizar Actas</string>
    <string name="menu_item_informe_acta">Informe de Actas</string>
    <string name="menu_item_backup_database">BackUp para Auditoria</string>
    <string name="menu_item_search_objetos">Buscar</string>
    <string name="all_scores">&amp;quot;Todas las puntuaciones&amp;quot;</string>
    <string name="friends_scores">&amp;quot;Decenas de amigos&amp;quot;</string>
    <string name="no_scores">&amp;quot;No hay resultados que mostrar.&amp;quot;</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Clave</string>
    <string name="attempts">Intentos</string>
    <string name="login">Ingresar</string>
    <string name="rank">&amp;quot;Tráfico&amp;quot;</string>
    <string name="score">&amp;quot;Partitura&amp;quot;</string>
    <string name="wait_msg">&amp;quot;Decenas Recuperando ...&amp;quot;</string>
    <string name="wait_title">&amp;quot;Cargando ...&amp;quot;</string>
    <string name="settings">Configuración</string>
    <string name="create_acta">Generar Acta</string>
    <string name="create_acta_tiporuta">LUGAR DEL ACTA DE CONSTATACION</string>
    <string name="create_acta_seltiporuta">Seleccione un Item</string>
    <string name="create_acta_nroruta">En:</string>
    <string name="create_acta_altura_calle">Altura:</string>
    <string name="create_acta_selnroruta">Seleccione un Item</string>
    <string name="create_acta_selpais">Seleccione un Pais</string>
    <string name="create_acta_selprovincia">Seleccione una Provincia</string>
    <string name="create_acta_seldepartamento">Seleccione un Departamento</string>
    <string name="create_acta_sellocalidad">Seleccione una Localidad</string>
    <string name="create_acta_selgenero">Seleccione un Genero</string>
    <string name="create_acta_seltipodocumento">Seleccione un Tipo de Documento</string>
    <string name="create_acta_selsexo">Seleccione Sexo</string>
    <string name="create_acta_seltipovehiculo">Seleccione un Tipo de Vehiculo</string>
    <string name="create_acta_km">Km:</string>
    <string name="create_acta_chk_noposeelicencia">No Posee Licencia de Conducir</string>
    <string name="create_acta_chk_conductor_titular">El Conductor es Titular del Vehiculo</string>
    <string name="create_acta_chk_sin_testigo">No se Registra Testigo</string>
    <string name="create_acta_chk_sin_titular">Sin Titular</string>
    <string name="create_acta_chk_sin_conductor">Sin Conductor</string>
    <string name="create_acta_chk_licencia_retenida">Licencia Retenida</string>
    <string name="create_acta_chk_vehiculo_retenido">Vehiculo Retenido</string>
    <string name="create_acta_chk_licencia_unica_provincial">Licencia Nacional</string>
    <string name="create_acta_nrolicencia">Nro Licencia:</string>
    <string name="create_acta_ingreselicencia">Numero de licencia</string>
    <string name="create_acta_verificarlicencia">Verificar/Consultar</string>
    <string name="create_acta_verificarcodigoqr">Cod Mancha </string>
    <string name="create_acta_claselicencia">Categoría Licencia:</string>
    <string name="create_acta_pais">Pais</string>
    <string name="create_acta_provincia">Provincia</string>
    <string name="create_acta_departamento">Departamento</string>
    <string name="create_acta_localidad">Localidad</string>
    <string name="create_acta_copiardatostitular">Copiar Datos del Titular</string>
    <string name="create_acta_verificardocumento">Buscar</string>
    <string name="create_acta_ingresedocumento">Numero de documento</string>
    <string name="create_acta_apellido">Apellido:</string>
    <string name="create_acta_nombre">Nombre:</string>
    <string name="create_acta_telefonoconductor">Telefono:</string>
    <string name="create_acta_emailconductor">Email:</string>
    <string name="create_acta_chk_callepublica">Calle Publica</string>
    <string name="create_acta_chk_altura">Sin Numero</string>
    <string name="create_acta_callepublica">Calle Pública:</string>
    <string name="create_acta_sinnumero">Sin Número:</string>
    <string name="create_acta_calle">Domicilio:</string>
    <string name="create_acta_altura">Numero:</string>
    <string name="create_acta_piso">Piso:</string>
    <string name="create_acta_depto">Depto:</string>
    <string name="create_acta_barrio">Barrio:</string>
    <string name="create_acta_codigopostal">Codigo Postal:</string>
    <string name="create_acta_manifestacion_testigo">Manifestacion Testigo:</string>
    <string name="create_acta_tipovehiculo">Tipo de Vehiculo:</string>
    <string name="create_acta_tipopatente">Tipo Patente:</string>
    <string name="create_acta_dominio">Dominio:</string>
    <string name="create_acta_ingresedominio">Dominio</string>
    <string name="create_acta_verificardominio">Buscar</string>
    <string name="create_acta_seltipopatente">Seleccione un Tipo de Patente</string>
    <string name="create_acta_marca">Marca:</string>
    <string name="create_acta_selmarca">Seleccione una Marca</string>
    <string name="create_acta_color">Color:</string>
    <string name="create_acta_modelo">Modelo:</string>
    <string name="create_acta_aniomodelo">Año:</string>
    <string name="create_acta_alcohol">Alcohol en Sangre:</string>
    <string name="create_acta_selcolor">Seleccione un Color</string>
    <string name="create_acta_chk_conduccion_peligrosa">Viola Articulo 81</string>
    <string name="create_acta_chk_deja_copia">Deja Copia</string>
    <string name="create_acta_codigoinfraccion1">Codigo de Infraccion :</string>
    <string name="create_acta_codigoinfraccion2">Codigo de Infraccion 2:</string>
    <string name="create_acta_ingresecodigoinfraccion">Seleccione un codigo de la Infraccion &#8230;</string>
    <string name="create_acta_verificarapercibimiento">Consultar</string>
    <string name="create_acta_agregarinfraccion"> + </string>
    <string name="create_acta_sincodigoseleccionado">&#8230;</string>
    <string name="create_acta_observaciones">Observaciones:</string>
    <string name="create_acta_juzgado">Juzgado:</string>
    <string name="create_acta_seljuzgado">Seleccione un Juzgado</string>
    <string name="create_acta_selseccional">Seleccione una Secretaria</string>
    <string name="create_acta_fotos">Fotos:</string>
    <string name="create_acta_descripcion_imagen_foto_licencia">Imagen de la Licencia de Conducir del Infractor</string>
    <string name="create_acta_label_foto_licencia">Foto #1</string>
    <string name="create_acta_label_foto_documento">Foto #2</string>
    <string name="create_acta_label_foto_alternativa">Imagen de una Imagen Alternativa</string>
    <string name="create_acta_ingrese_marca">Marca del vehiculo&#8230;</string>
    <string name="create_acta_ingrese_color">Color del vehiculo&#8230;</string>
    <string name="create_acta_ingrese_modelo">Modelo del vehiculo&#8230;</string>
    <string name="create_acta_ingrese_aniomodelo">Año del modelo del vehiculo&#8230;</string>
    <string name="verificacion_buscar_por">Buscar por</string>
    <string name="verificacion_consultar">Buscar</string>
    <string name="verificacion_tipo_busqueda">Seleccione el Tipo de Busqueda</string>
    <string name="title_activity_login">Iniciar Sesión</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_auto_open_web_title">Open web pages automatically</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
  <string name="preferences_decode_1D_product_title">1D Product</string>
  <string name="preferences_decode_Aztec_title">Aztec</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_disable_metering_title">No metering</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_history_summary">Store your scans in History</string>
  <string name="preferences_history_title">Add to History</string>
  <string name="preferences_invert_scan_title">Invert scan</string>
  <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
  <string name="preferences_orientation_title">No automatic rotation</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
  <string name="preferences_search_country">Search country</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
</resources>