<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- nuevo -->
    <PreferenceCategory android:title="@string/preferences_scanning_title">
    <CheckBoxPreference
        android:key="preferences_decode_1D_product"
        android:defaultValue="false"
        android:title="@string/preferences_decode_1D_product_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_1D_industrial"
        android:defaultValue="false"
        android:title="@string/preferences_decode_1D_industrial_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_QR"
        android:defaultValue="true"
        android:title="@string/preferences_decode_QR_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_Data_Matrix"
        android:defaultValue="false"
        android:title="@string/preferences_decode_Data_Matrix_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_Aztec"
        android:defaultValue="false"
        android:title="@string/preferences_decode_Aztec_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_PDF417"
        android:defaultValue="true"
        android:title="@string/preferences_decode_PDF417_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_actions_title">
    <CheckBoxPreference
        android:key="preferences_play_beep"
        android:defaultValue="true"
        android:title="@string/preferences_play_beep_title"/>
    <CheckBoxPreference
        android:key="preferences_vibrate"
        android:defaultValue="false"
        android:title="@string/preferences_vibrate_title"/>
    <CheckBoxPreference
        android:key="preferences_copy_to_clipboard"
        android:defaultValue="true"
        android:title="@string/preferences_copy_to_clipboard_title"/>
    <CheckBoxPreference
        android:key="preferences_auto_open_web"
        android:defaultValue="false"
        android:title="@string/preferences_auto_open_web_title"/>
    <CheckBoxPreference
        android:key="preferences_remember_duplicates"
        android:defaultValue="false"
        android:title="@string/preferences_remember_duplicates_title"
        android:summary="@string/preferences_remember_duplicates_summary"/>
    <CheckBoxPreference
        android:key="preferences_history"
        android:defaultValue="true"
        android:title="@string/preferences_history_title"
        android:summary="@string/preferences_history_summary"/>
    <CheckBoxPreference
        android:key="preferences_supplemental"
        android:defaultValue="true"
        android:title="@string/preferences_supplemental_title"
        android:summary="@string/preferences_supplemental_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_general_title">
    <ListPreference
        android:entries="@array/preferences_front_light_options"
        android:entryValues="@array/preferences_front_light_values"
        android:key="preferences_front_light_mode"
        android:defaultValue="OFF"
        android:title="@string/preferences_front_light_title"
        android:summary="@string/preferences_front_light_summary"/>
    <CheckBoxPreference
        android:key="preferences_auto_focus"
        android:defaultValue="true"
        android:title="@string/preferences_auto_focus_title"/>
    <CheckBoxPreference
        android:key="preferences_invert_scan"
        android:defaultValue="false"
        android:title="@string/preferences_invert_scan_title"
        android:summary="@string/preferences_invert_scan_summary"/>
    <CheckBoxPreference
        android:key="preferences_bulk_mode"
        android:defaultValue="false"
        android:title="@string/preferences_bulk_mode_title"
        android:summary="@string/preferences_bulk_mode_summary"/>
    <CheckBoxPreference
        android:key="preferences_orientation"
        android:defaultValue="true"
        android:title="@string/preferences_orientation_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_result_title">
    <EditTextPreference
        android:key="preferences_custom_product_search"
        android:title="@string/preferences_custom_product_search_title"
        android:summary="@string/preferences_custom_product_search_summary"/>
    <ListPreference
        android:key="preferences_search_country"
        android:defaultValue="-"
        android:entries="@array/country_codes"
        android:entryValues="@array/country_codes"
        android:title="@string/preferences_search_country"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_device_bug_workarounds_title">
    <CheckBoxPreference
        android:key="preferences_disable_continuous_focus"
        android:defaultValue="true"
        android:title="@string/preferences_disable_continuous_focus_title"
        android:summary="@string/preferences_disable_continuous_focus_summary"/>
    <CheckBoxPreference
        android:key="preferences_disable_exposure"
        android:defaultValue="true"
        android:title="@string/preferences_disable_exposure_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_metering"
        android:defaultValue="true"
        android:title="@string/preferences_disable_metering_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_barcode_scene_mode"
        android:defaultValue="false"
        android:title="@string/preferences_disable_barcode_scene_mode_title"/>
  </PreferenceCategory>
    
    <!-- Fin Nuevo -->
    <PreferenceCategory android:title="General Printer Options">
        <CheckBoxPreference android:title="Get Labels From Printer" android:key="GET_FILES_FROM_PRINTER" android:summary="Get Labels From Printer" android:defaultValue="true" />
        <ListPreference android:entries="@array/printerLanguageOptions" android:title="Printer Language" android:key="DEFAULT_PRINTER_LANGUAGE" android:summary="Current Printer Language: Default Language" android:defaultValue="Use Default" android:dialogTitle="Choose Default Printer Language" android:entryValues="@array/printerLanguageOptions" />
        <EditTextPreference android:text="Use Default" android:maxLength="5" android:numeric="decimal" android:title="Printer Port" android:key="DEFAULT_PRINTER_PORT" android:summary="Current Printer Port: Use Default" android:defaultValue="" android:dialogTitle="Enter Port Number\nBlank for Default Port" />
        <EditTextPreference android:title="File Directory" android:key="FILE_DIRECTORY" android:summary="Current Directory: /sdcard" android:defaultValue="/sdcard" android:dialogTitle="Enter File Directory" android:inputType="textNoSuggestions|textUri" />
        <Preference android:title="Remote Storage" android:key="remoteStoreButton" android:summary="Remote Storage Settings" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Page Options">
        <ListPreference android:entries="@array/pageSizeChoices" android:title="Page Options" android:key="PAGE_SIZE_OPTION" android:summary="Current Page Size: 4x6 (203 dpi)" android:defaultValue="4x6 (203 dpi)" android:dialogTitle="Select A Page Size" android:entryValues="@array/pageSizeChoices" />
    </PreferenceCategory>
    
    <PreferenceCategory android:enabled="false" android:title="Custom Page Size" android:key="CUSTOM_SETTINGS">
        <EditTextPreference android:maxLength="5" android:numeric="decimal" android:title="Page Width" android:key="CUSTOM_PAGE_WIDTH" android:summary="Current Page Width: 2" android:defaultValue="2" android:dialogTitle="Enter Width" />
        <EditTextPreference android:maxLength="5" android:numeric="decimal" android:title="Page Height" android:key="CUSTOM_PAGE_HEIGHT" android:summary="Current Page Height : 4" android:defaultValue="4" android:dialogTitle="Enter Height" />
        <ListPreference android:entries="@array/DPIDisplay" android:title="DPI" android:key="CUSTOM_DPI" android:summary="Current DPI: 203" android:defaultValue="203.2" android:dialogTitle="Choose DPI" android:entryValues="@array/DPIValues" />
    </PreferenceCategory>
    
    
</PreferenceScreen>